<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="15dp"
        android:background="?attr/backColor"
        android:layout_gravity="center"
        >

        <EditText
            android:id="@+id/note_header"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="start|top"
            android:padding="10dp"
            android:textColor="?attr/fontColor"
            android:hint="@string/title"
            android:inputType="textMultiLine|textCapSentences"
            android:background="@drawable/input_note"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.057" />

        <EditText
            android:id="@+id/main_note"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/input_note"
            android:gravity="start|top"
            android:hint="@string/note_hint"
            android:inputType="textMultiLine|textCapSentences"
            android:maxLines="10"
            android:padding="10dp"
            android:textColor="?attr/fontColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/note_header"
            app:layout_constraintVertical_bias="0.114" />


        <Button
            android:id="@+id/create_note"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/next_btn"
            android:text="@string/create_note"
            android:textAllCaps="true"
            android:textColorHint="?attr/fontColor"
            android:textColor="?attr/fontColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_note"
            app:layout_constraintVertical_bias="0.637" />

        <Button
            android:id="@+id/show_date"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/next_btn"
            android:drawableStart="@drawable/ic_date"
            android:fontFamily="@font/cousine_bold_italic"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:text=""
            android:textColor="?attr/fontColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/create_note"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.021"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_note"
            app:layout_constraintVertical_bias="1.0" />



    </androidx.constraintlayout.widget.ConstraintLayout>
